Navbar menu fixed
Navbar menu which was appearing to be stretched has now been fixed.

Fixes #326

--- a/static/css/menu.css
+++ b/static/css/menu.css
@@ -38,13 +38,6 @@ p {
   font-family: Helvetica,Verdana;
 }
 
-#about {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin: 0 0 -20px 0;
-}
-
 #about > a {
   text-decoration: none;
   color: #737373;
